Fixed a slight spacing bug

--- a/style/src/main.css
+++ b/style/src/main.css
@@ -266,7 +266,7 @@ mjx-container
 	top: 0;
 	left: 0;
 	
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	
 	z-index: 1000;
